--- a/fontscale-table-font-steps.tex
+++ b/fontscale-table-font-steps.tex
@@ -1,6 +1,4 @@
-\ProvidesFile
-  {fontscale-table-font-steps.tex}
-  [2024-09-22]
+\ProvidesFile{fontscale-table-font-steps.tex}[2024-09-24]
 
 \begin{table}
   \centering
