--- a/fontscale-table-musical.tex
+++ b/fontscale-table-musical.tex
@@ -1,11 +1,11 @@
-\ProvidesFile{fontscale-table-musical.tex}[2024-09-29]
+\ProvidesFile{fontscale-table-musical.tex}[2024-10-01]
 
 \begin{table}
   \centering
   \caption
     {%
       The font size of each font size command from \cs{tiny} to \cs{Huge} when using a musical typographic scale with the initial values.
-      The font sizes are in units of \unit{pt} and rounded to two decimal places.%
+      The font sizes are in units of \unit{pt} and rounded to \num{2} decimal places.%
       \label{table:musical}%
     }
   \bigskip
